feat: copy depencies first - layer caching example

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,11 +4,14 @@ FROM node:17-alpine
 # Working directory (when we run commands or specify paths, it's from this location)
 WORKDIR /app
 
-# Source code layer (copies all files in current folder into the app folder in the image)
-COPY . .
+# Copy dependencies first
+COPY package.json .
 
 # Commands that should be run during build (will be run in working directory)
 RUN npm install
+
+# Source code layer (copies all files in current folder into the app folder in the image)
+COPY . .
 
 # Which port should be exposed from container (used by docker desktop for port mapping)
 EXPOSE 4000
