--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,15 @@ services:
     volumes:
       - ./api:/app
       - /app/node_modules
+    
+  myblog:
+    build: ./myblog
+    container_name: myblog_c
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./myblog:/app
+      - /app/node_modules
+    # React properties: start them in interactive mode (react container won't automatically shut down)
+    stdin_open: true
+    tty: true
